# ChangeLog for media-plugins/mythmusic
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/Attic/ChangeLog,v 1.46 2006/09/16 01:49:53 cardoe Exp $

  16 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.19.ebuild,
  mythmusic-0.20.ebuild:
  Adding cdr USE flag so it can burn CDs

*mythmusic-0.20 (14 Sep 2006)

  14 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.19.ebuild,
  +mythmusic-0.20.ebuild:
  Rev bump. Updated both version to new eclass

  29 May 2006; Doug Goldstein <cardoe@gentoo.org>
  -files/mythmusic-0.18.1-sample_rate_type.patch, -mythmusic-0.18.1.ebuild:
  getting rid of old stuff

*mythmusic-0.19 (12 Feb 2006)

  12 Feb 2006; Doug Goldstein <cardoe@gentoo.org> +mythmusic-0.19.ebuild:
  rev bump

  29 Jun 2005; Doug Goldstein <cardoe@gentoo.org>
  -files/mythmusic-0.17-sample_rate_type.patch, -mythmusic-0.17-r2.ebuild:
  remove old version

  08 Jun 2005; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.18.1.ebuild:
  fixed up amd64 issue

  08 Jun 2005; Doug Goldstein <cardoe@gentoo.org>
  +files/mythmusic-0.18.1-sample_rate_type.patch, mythmusic-0.18.1.ebuild:
  faad2 fix back in since it was taken out of faad2

  06 Jun 2005; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.17-r2.ebuild:
  Fixed deps for removed mythfrontend

  06 Jun 2005; Doug Goldstein <cardoe@gentoo.org> -mythmusic-0.16.ebuild,
  -mythmusic-0.18.ebuild:
  Fixed deps for removed mythfrontend

  31 May 2005; David Holm <dholm@gentoo.org> mythmusic-0.18.1.ebuild:
  Added to ~ppc.

  30 May 2005; Sven Wegener <swegener@gentoo.org> mythmusic-0.16.ebuild:
  Moved from gcc.eclass to toolchain-funcs.eclass, bug #92745.

  27 May 2005; Jeremy Huddleston <eradicator@gentoo.org>
  mythmusic-0.18.1.ebuild:
  -amd64 until I get around to fixing the bad cast.

  27 May 2005; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.18.1.ebuild: