@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/Attic/mythmusic-0.20.ebuild,v 1.2 2006/09/16 01:49:53 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/Attic/mythmusic-0.20.ebuild,v 1.3 2006/09/17 23:32:25 cardoe Exp $
 
 inherit mythtv-plugins flag-o-matic toolchain-funcs eutils
 
@@ -17,7 +17,7 @@ RDEPEND=">=media-sound/cdparanoia-3.9.8
 	aac? ( >=media-libs/faad2-2.0-r7 )
 	fftw? ( =sci-libs/fftw-2* )
 	sdl? ( >=media-libs/libsdl-1.2.5 )
-	cdr? ( >=app-cdr/cdrtools-2.01 )"
+	cdr? ( virtual/cdrtools )"
 
 DEPEND="${RDEPEND}"
 
