@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/mythmusic
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/Attic/ChangeLog,v 1.46 2006/09/16 01:49:53 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/Attic/ChangeLog,v 1.47 2006/09/17 23:32:25 cardoe Exp $
+
+  17 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.19.ebuild,
+  mythmusic-0.20.ebuild:
+  switch to virtual/cdrtools per bug #147880
 
   16 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.19.ebuild,
   mythmusic-0.20.ebuild:
